# sagrada

./: .clang-format  CMakeLists.txt  README.md  color.c  color.h  compile.bat  game.txt  main.c
src/: board.c  board.h  bot.c  bot.h  color.c  color.h  die.c  die.h  helper.c  helper.h  main.c  terminal.c  terminal.h
src/core/: argparser.c  argparser.h  config.c  config.h  exit.h
src/game/: logic.c  logic.h
src/game/board/: board.c  board.h
src/game/bot/: bot.c  bot.h
src/game/die/: die.c  die.h
src/ui/: art.c  art.h  color.c  color.h  name.c  name.h  terminal.c  terminal.h
